--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!--Header navigation-->
 
-    <header class="header--border">
+    <header class="header-border">
       <div class="header container">
         <nav class="header__nav">
           <a class="logo logo-header" href="./index.html"
